# Echoes-of-the-Swamp

./: Cargo.toml  README.md
.cargo/: config.toml
assets/items/: items.json
eots_asset_manager/: Cargo.toml
eots_asset_manager/src/: lib.rs  plugin.rs  resource.rs
eots_camera/: Cargo.toml
eots_camera/src/: components.rs  lib.rs  plugin.rs
eots_constants/: Cargo.toml
eots_constants/src/: biome.rs  bubble.rs  camera.rs  creature.rs  element.rs  lib.rs  player.rs  terrain.rs  window.rs
eots_constants/src/biome/: abyss.rs  caverns.rs  crystal.rs  desert.rs  jungle.rs  mushroom_fields.rs  ocean.rs  plains.rs  swamp.rs  tundra.rs  underworld.rs  volcano.rs
eots_constants/src/bubble/: classic_bubble.rs
eots_constants/src/creature/: fly.rs  frog.rs  salamander.rs  scolopendra.rs  spider.rs  toad.rs  worm.rs
eots_core/: Cargo.toml
eots_core/src/: lib.rs  session_data.rs  states.rs
eots_creature/: Cargo.toml
eots_creature/src/: components.rs  lib.rs  plugin.rs
eots_inventory/: Cargo.toml
eots_inventory/src/: components.rs  errors.rs  events.rs  lib.rs  plugin.rs
eots_item/: Cargo.toml
eots_item/src/: item.rs
eots_perception/: Cargo.toml
eots_perception/src/: components.rs  debug.rs  lib.rs  plugin.rs
eots_player/: Cargo.toml
eots_player/src/: components.rs  events.rs  lib.rs  plugin.rs  spawn.rs
eots_skeleton_rig/: Cargo.toml
eots_skeleton_rig/src/: builder.rs  components.rs  debug.rs  descriptions.rs  inverse_kinematic.rs  lib.rs  plugin.rs  utils.rs
eots_spawner/: Cargo.toml
eots_spawner/src/: components.rs  lib.rs  plugin.rs  position_strategy.rs
eots_terrain/: Cargo.toml
eots_terrain/src/: components.rs  events.rs  lib.rs  plugin.rs  resources.rs  utils.rs
eots_terrain/src/chunk/: builder.rs  mod.rs  spawner.rs
eots_ui/: Cargo.toml
eots_ui/src/: fps_plugin.rs  plugin.rs
eots_ui/src/menu/: mod.rs
eots_ui/src/menu/biome_selection/: components.rs  plugin.rs
eots_ui/src/menu/biome_selection/systems/: interactions.rs  layout.rs
eots_ui/src/menu/main_menu/: components.rs
eots_ui/src/menu/main_menu/systems/: interactions.rs  layout.rs
src/: game_plugin.rs  main.rs
src/ui/: mod.rs  plugin.rs
src/ui/menu/biome_selection/: components.rs  plugin.rs  styles.rs
src/ui/menu/biome_selection/systems/: interactions.rs  layout.rs
src/ui/menu/main_menu/: components.rs  mod.rs  plugin.rs
src/ui/menu/main_menu/systems/: interactions.rs  layout.rs
