[package]
name = "echoes-of-the-swamp"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
codegen-units = 1

[build-dependencies]
embed-resource = "3.0.3"

[workspace]
members = [
    "eots_asset_manager",
    "eots_camera",
    "eots_constants",
    "eots_core",
    "eots_creature",
    "eots_inventory",
    "eots_item",
    "eots_perception",
    "eots_player",
    "eots_skeleton_rig",
    "eots_spawner",
    "eots_terrain",
    ".",
]

[workspace.dependencies]
eots_asset_manager = { path = "./eots_asset_manager" }
eots_camera = { path = "./eots_camera" }
eots_constants = { path = "./eots_constants" }
eots_core = { path = "./eots_core" }
eots_creature = { path = "./eots_creature" }
eots_inventory = { path = "./eots_inventory" }
eots_item = { path = "./eots_item" }
eots_perception = { path = "./eots_perception" }
eots_player = { path = "./eots_player" }
eots_skeleton_rig = { path = "./eots_skeleton_rig" }
eots_spawner = { path = "./eots_spawner" }
eots_terrain = { path = "./eots_terrain" }
perlin_noise = { git = "https://github.com/Syn0xy/personal-perlin-noise", branch = "main" }
rand = "0.9.2"
bevy = "0.17.1"
bevy_common_assets = { version = "0.14.0", features = ["json"] }
bevy-inspector-egui = "0.34.0"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
strum = "0.27.2"
strum_macros = "0.27.2"
serde = "1.0.228"
serde_json = "1.0.145"

[dependencies]
eots_asset_manager = { workspace = true }
eots_camera = { workspace = true }
eots_constants = { workspace = true }
eots_core = { workspace = true }
eots_creature = { workspace = true }
eots_inventory = { workspace = true }
eots_item = { workspace = true }
eots_perception = { workspace = true }
eots_player = { workspace = true }
eots_skeleton_rig = { workspace = true }
eots_spawner = { workspace = true }
eots_terrain = { workspace = true }
bevy = { workspace = true }
log = { workspace = true }
bevy-inspector-egui = { workspace = true }
