[package]
name = "eots_creature"
version = "0.1.0"
edition = "2024"

[dependencies]
eots_constants = { workspace = true }
eots_core = { workspace = true }
eots_inventory = { workspace = true }
eots_perception = { workspace = true }
eots_skeleton_rig = { workspace = true }
eots_spawner = { workspace = true }
eots_terrain = { workspace = true }
bevy = { workspace = true }
